Added vhosts and ssl support

--- a/templates/default/logging.properties
+++ b/templates/default/logging.properties
@@ -13,37 +13,33 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# handlers = 1catalina.org.apache.juli.FileHandler, 2localhost.org.apache.juli.FileHandler, 3manager.org.apache.juli.FileHandler, 4host-manager.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
+handlers = 1catalina.org.apache.juli.FileHandler, 2localhost.org.apache.juli.FileHandler, 3manager.org.apache.juli.FileHandler, 4host-manager.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 
-<%
-
-  log_handlers = [] 
-  
-  @log_handlers.keys.each_with_index do |logname, index|
-    log_handlers[index] =  "#{index+1}#{logname}.org.apache.juli.FileHandler"
-  end
-  
-%>
-
-handlers = <%= log_handlers.join(',') %>
-
-#.handlers = 1catalina.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
-.handlers = 1catalina.org.apache.juli.FileHandler
+.handlers = 1catalina.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 
 ############################################################
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
 
-<% @log_handlers.each_with_index do |(logname, loglevel), index| -%>
-<%= (index+1) %><%= logname %>.org.apache.juli.FileHandler.level = <%= loglevel %>
-<%= (index+1) %><%= logname %>.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
-<%= (index+1) %><%= logname %>.org.apache.juli.FileHandler.prefix = <%= logname %>.
-  
-<% end -%>
+1catalina.org.apache.juli.FileHandler.level = FINE
+1catalina.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
+1catalina.org.apache.juli.FileHandler.prefix = catalina.
 
-# java.util.logging.ConsoleHandler.level = <%= @loglevel %>
-# java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+2localhost.org.apache.juli.FileHandler.level = FINE
+2localhost.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
+2localhost.org.apache.juli.FileHandler.prefix = localhost.
+
+3manager.org.apache.juli.FileHandler.level = FINE
+3manager.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
+3manager.org.apache.juli.FileHandler.prefix = manager.
+
+4host-manager.org.apache.juli.FileHandler.level = FINE
+4host-manager.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
+4host-manager.org.apache.juli.FileHandler.prefix = host-manager.
+
+java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 
 ############################################################
@@ -51,25 +47,21 @@ handlers = <%= log_handlers.join(',') %>
 # Provides extra control for each logger.
 ############################################################
 
-<% @log_handlers.each_with_index do |(logname, loglevel), index| -%>
-<% if logname == "catalina" -%>
-# no configuration for logger <%= (index+1) %><%= logname %>.org.apache.juli.FileHandler
-<% elsif logname == @vhost_name -%>
-  org.apache.catalina.core.ContainerBase.[Catalina].[<%= @vhost_name %>].level = INFO
-  org.apache.catalina.core.ContainerBase.[Catalina].[<%= @vhost_name %>].handlers = <%= (index+1) %><%= logname %>.org.apache.juli.FileHandler
-<% else -%>
-  org.apache.catalina.core.ContainerBase.[Catalina].[<%= @vhost_name %>].[/<%= logname %>].level = INFO
-  org.apache.catalina.core.ContainerBase.[Catalina].[<%= @vhost_name %>].[/<%= logname %>].handlers = <%= (index+1) %><%= logname %>.org.apache.juli.FileHandler
-<% end -%>
-  
-<% end -%>
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].level = INFO
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].handlers = 2localhost.org.apache.juli.FileHandler
+
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/manager].level = INFO
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/manager].handlers = 3manager.org.apache.juli.FileHandler
+
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager].level = INFO
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager].handlers = 4host-manager.org.apache.juli.FileHandler
 
 # For example, set the org.apache.catalina.util.LifecycleBase logger to log
 # each component that extends LifecycleBase changing state:
-#org.apache.catalina.util.LifecycleBase.level = <%= @loglevel %>
+#org.apache.catalina.util.LifecycleBase.level = FINE
 
 # To see debug messages in TldLocationsCache, uncomment the following line:
-#org.apache.jasper.compiler.TldLocationsCache.level = <%= @loglevel %>
+#org.apache.jasper.compiler.TldLocationsCache.level = FINE
 
 
 ################################
